# yjkj_desktop_creater

./: .gitignore  .version.txt  CMakeLists.txt  README.md  desktop_creator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
desktop_creator/: CMakeLists.txt  desktop_creator.cpp
